--- a/src/components/EndScreen.css
+++ b/src/components/EndScreen.css
@@ -1,7 +1,17 @@
 .endScreen{
-    position: absolute;
-    width: auto;
-    top: 25%;
+    position: fixed;
+    width: 100%;
     left: 50%;
     transform: translateX(-50%);
+    max-width: 700px;
+    margin: 0 auto;
+    text-align: center;
+}
+
+.gradCap{
+    font-size: 256px;
+}
+
+.endScreen button:not(:hover) {
+    background: white;
 }
