--- a/src/components/Splash.css
+++ b/src/components/Splash.css
@@ -1,27 +1,35 @@
-body{
+body {
     background-color: bisque;
 }
 
-.splashScreen{
-    position: absolute;
-    width: auto;
-    font-size: larger;
-    top: 10%;
-    left: 50%;
-    transform: translateX(-50%);
+.splashScreen {
+    width: 80%;
+    max-width: 700px;
+    margin: 0 auto;
 }
 
 .splashScreen button:not(:hover) {
     background: white;
 }
 
-.howToPlay{
-    position: relative;
-    left:-5%;
-    margin-top: 75px;
+.title {
+    margin-top: 20%;
 }
 
-.gamePlay{
-    position: relative;
-    left: 10%;
+.bus img {
+    margin-top: -20px;
+    margin-left: -30px;
+    margin-right: 10px;
+    width: 64px;
 }
+
+@media only screen and (max-width: 800px) and (max-height: 600px){
+    .howToPlay{
+        display: none;
+    }
+  }
+  @media only screen and (max-height: 600px){
+    .howToPlay{
+        display: none;
+    }
+  }
